Fix dashboard icon color in WordPress 5.3 (with fallback) and dark mode

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,7 +2,7 @@
 #dashboard_right_now .cachify-icon{
 	width: 19px;
 	height: 13px;
-	fill: #82878c;
+	fill: #606a73;
 }
 
 #dashboard_right_now li a.cachify-glance::before{
